--- a/Admin/src/app/pages/dashboards/info-app/info-app.component.html
+++ b/Admin/src/app/pages/dashboards/info-app/info-app.component.html
@@ -1,156 +1,156 @@
-<div class="row" style="margin-bottom: 20px;">
-  <div class="col-xl-6 col-lg-6">
-<div class="container">
-  <h4 style="font-size: 17px;" (click)="scrollTo('problematica')"><i class="fas fa-exclamation-circle"></i>Consumo y Adicción de Sustancias Psicoactivas Ilegales: Un Análisis de Riesgo</h4>
-  <hr>
-
-  <div class="contenedor-imagen">
-    <img src="../../../../assets/images/tesis/info-app1.png" alt="Infografía del Consumo" class="responsive-img">
-  </div>
-  
-
-  <section id="problematica">
-    <h4 style="font-size: 17px;" (click)="scrollTo('introduccion')"><i class="fas fa-info-circle"></i> Introducción</h4>
-    <p>
-      <strong>El consumo y adicción de sustancias psicoactivas ilegales en Colombia</strong> ha crecido significativamente con los años, afectando principalmente a los jóvenes. Las sustancias ilegales más comunes incluyen:
-    </p>
-    <ul>
-      <li><strong>Marihuana</strong></li>
-      <li><strong>Cocaína</strong></li>
-      <li><strong>Basuco</strong></li>
-    </ul>
-  </section>
-  
-  <section id="impacto">
-    <h4 style="font-size: 17px;" (click)="scrollTo('impacto')"><i class="fas fa-skull-crossbones"></i> Impacto del Consumo</h4>
-    <ul>
-      <li><strong>Relaciones sociales</strong>: Afecta las relaciones con amigos y familiares.</li>
-      <li><strong>Salud mental y física</strong>: Deteriora tanto la salud mental como física.</li>
-      <li><strong>Rendimiento</strong>: Impacta el rendimiento académico y laboral.</li>
-    </ul>
-  </section>
-  <div class="card-header d-flex">
-              <h3 class="card-title flex-grow-1 mb-0" > <i class="fas fa-exclamation-triangle"></i>Consecuencias de consumir marihuana, basuco y cocaína</h3>
-          </div>
-          <div class="card-body px-0">
-            <div class="table-responsive" style="min-width: 80%; max-width: 70%; margin-left: auto; margin-right: auto;">
-              
-              <table style="width: 100%; border-collapse: collapse; margin-top: 20px;">
-                <thead>
-                  <tr>
-                    <th>Sustancia</th>
-                    <th>Consecuencias</th>
-                  </tr>
-                </thead>
-                <tbody>
-                  <tr>
-                    <td>Marihuana</td>
-                    <td>
-                      <ul style="margin: 0; padding-left: 20px;">
-                        <li>Aumento del riesgo de trastornos mentales como la depresión y la ansiedad.</li>
-                        <li>Alteración de la memoria a corto plazo y de las funciones cognitivas.</li>
-                        <li>Problemas respiratorios debido a la inhalación de humo.</li>
-                      </ul>
-                    </td>
-                  </tr>
-                  <tr>
-                    <td>Cocaína</td>
-                    <td>
-                      <ul style="margin: 0; padding-left: 20px;">
-                        <li>Incremento en la frecuencia cardíaca y presión arterial, lo que puede llevar a problemas cardiovasculares graves.</li>
-                        <li>Alteraciones en el comportamiento, como paranoia y agresividad.</li>
-                        <li>Riesgo de adicción severa y deterioro de las funciones neurológicas.</li>
-                      </ul>
-                    </td>
-                  </tr>
-                  <tr>
-                    <td>Bazuco</td>
-                    <td>
-                      <ul style="margin: 0; padding-left: 20px;">
-                        <li>Desintegración rápida de la salud física y mental, incluyendo daños graves en los pulmones y el sistema nervioso.</li>
-                        <li>Riesgo alto de desarrollo de trastornos psiquiátricos y dependencia.</li>
-                        <li>Problemas sociales y familiares debido al comportamiento errático y a la adicción intensa.</li>
-                      </ul>
-                    </td>
-                  </tr>
-                </tbody>
-              </table>
-            </div>
-          </div>
-</div>
-<div class ="container">
-  <div class="card-header align-items-center d-flex" id="dataset">
-      <h4 (click)="scrollTo('dataset')" style="font-size: 17px;"> <i class="fas fa-database"></i>Información sobre el set de datos utilizado</h4><br>
-  </div>
-  <div class="card-body">
-    <p >El set de datos utilizado para la creación del modelo predictivo se tomó a partir de la Encuesta Nacional de Consumo de Sustancias Psicoactivas en Población General - ENCSPA- 2019, una ecuesta realizada por Departamento Administrativo Nacional de Estadística DANE.</p>
-    <p >La encuesta fue realizada con el fin de conocer la situación de las personas a partir de diferentes preguntas que se realizaron, tanto preguntas de caracter informativo como edad, etnia, lugar de vivienda, entre otros, asi mismo preguntas acerca del consumo de alcohol y sustancias psicoactivas ilegales.</p>
-    <p >Si desea conocer mas información sobre el set de datos usado puede ingresar al siguiente link: <a href="https://microdatos.dane.gov.co/index.php/catalog/680/study-description" target="_blank">Link de acceso al set de datos</a>.</p>
-  </div>
-</div>
-</div>
-
-<div class="col-xl-6 col-lg-6 justify-content-center">
-  <div class="container">
-    <h4 style="font-size: 17px;" (click)="scrollTo('problematica')"><i class="fas fa-exclamation-circle"></i>Información de la Aplicación</h4>
-    <hr>
-
-    <div class="contenedor-imagen">
-      <img src="../../../../assets/images/tesis/info-app2.png" alt="Infografía del Consumo" class="responsive-img">
-    </div>
-    <section id="objetivos">
-      <h4 style="font-size: 17px;" (click)="scrollTo('objetivos')"><i class="fas fa-bullseye"></i> Objetivos de la Aplicación</h4>
-      <ol>
-        <li><strong>Prevención del Consumo</strong>
-          <ul>
-            <li><strong>Grupos enfocados</strong>: Especialmente jóvenes.</li>
-            <li><strong>Información personalizada</strong>: Basada en la predicción del riesgo (muy bajo, bajo, medio, alto, muy alto).</li>
-          </ul>
-        </li>
-        <li><strong>Educación y Concientización</strong>
-          <ul>
-            <li><strong>Efectos nocivos</strong>: Información sobre los efectos perjudiciales de estas sustancias.</li>
-            <li><strong>Consejos preventivos</strong>: Estrategias para evitar el consumo.</li>
-          </ul>
-        </li>
-        <li><strong>Apoyo a Personas en Riesgo</strong>
-          <ul>
-            <li><strong>Evaluación personalizada</strong>: Análisis de factores de riesgo mediante algoritmos.</li>
-            <li><strong>Retroalimentación personalizada</strong>: Proporcionar apoyo específico basado en datos recolectados.</li>
-          </ul>
-        </li>
-        <li><strong>Investigación y Análisis de Datos</strong>
-          <ul>
-            <li><strong>Tendencias de consumo</strong>: Análisis de datos sobre el consumo de sustancias en Colombia.</li>
-            <li><strong>Programas de prevención</strong>: Contribución al desarrollo de programas de prevención más efectivos.</li>
-          </ul>
-        </li>
-      </ol>
-    </section>
-  
-    <section id="funcionalidades">
-      <h4  style="font-size: 17px;" (click)="scrollTo('funcionalidades')"><i class="fas fa-tools"></i> Funcionalidades de la Aplicación</h4>
-      <ul>
-        <li><strong>Predicción de riesgo</strong>: La aplicación evaluará el riesgo de consumo de sustancias en los usuarios.</li>
-        <li><strong>Educación continua</strong>: Proporcionará información actualizada sobre los riesgos y efectos del consumo.</li>
-        <li><strong>Apoyo personalizado</strong>: Ofrecerá consejos y estrategias específicas para cada usuario.</li>
-      </ul>
-    </section>
-  
-    <section id="beneficios">
-      <h4 style="font-size: 17px;" (click)="scrollTo('beneficios')"><i class="fas fa-medal"></i> Beneficios Esperados</h4>
+<div class="row d-flex align-items-stretch" style="margin-bottom: 20px;">
+  <div class="col-xl-6 col-lg-6 d-flex flex-column">
+    <div class="container flex-grow-1 d-flex flex-column">
+      <h4 style="font-size: 17px;" (click)="scrollTo('problematica')"><i class="fas fa-exclamation-circle"></i>Consumo y Adicción de Sustancias Psicoactivas Ilegales: Un Análisis de Riesgo</h4>
+      <hr>
 
       <div class="contenedor-imagen">
-        <img src="../../../../assets/images/tesis/info-app3.png" alt="Infografía del Consumo" class="responsive-img">
-      </div><br><br>
-      <ul>
-        <li><strong>Prevención del consumo</strong>: Reducir el número de nuevos consumidores.</li>
-        <li><strong>Mejora de la salud</strong>: Promover un mejor estado de salud mental y física.</li>
-        <li><strong>Concientización</strong>: Aumentar la conciencia pública sobre los peligros del consumo.</li>
-        <li><strong>Apoyo a las entidades de salud</strong>: Proveer datos para la creación de políticas de salud más efectivas.</li>
-      </ul>
-    </section>
-    <br>
+        <img src="../../../../assets/images/tesis/info-app1.png" alt="Infografía del Consumo" class="responsive-img">
+      </div>
+
+      <section id="problematica">
+        <h4 style="font-size: 17px;" (click)="scrollTo('introduccion')"><i class="fas fa-info-circle"></i> Introducción</h4>
+        <p>
+          <strong>El consumo y adicción de sustancias psicoactivas ilegales en Colombia</strong> ha crecido significativamente con los años, afectando principalmente a los jóvenes. Las sustancias ilegales más comunes incluyen:
+        </p>
+        <ul>
+          <li><strong>Marihuana</strong></li>
+          <li><strong>Cocaína</strong></li>
+          <li><strong>Basuco</strong></li>
+        </ul>
+      </section>
+
+      <section id="impacto">
+        <h4 style="font-size: 17px;" (click)="scrollTo('impacto')"><i class="fas fa-skull-crossbones"></i> Impacto del Consumo</h4>
+        <ul>
+          <li><strong>Relaciones sociales</strong>: Afecta las relaciones con amigos y familiares.</li>
+          <li><strong>Salud mental y física</strong>: Deteriora tanto la salud mental como física.</li>
+          <li><strong>Rendimiento</strong>: Impacta el rendimiento académico y laboral.</li>
+        </ul>
+      </section>
+
+      <div class="card-header d-flex">
+        <h3 class="card-title flex-grow-1 mb-0"><i class="fas fa-exclamation-triangle"></i>Consecuencias de consumir marihuana, basuco y cocaína</h3>
+      </div>
+      <div class="card-body px-0">
+        <div class="table-responsive" style="min-width: 80%; max-width: 70%; margin-left: auto; margin-right: auto;">
+          <table style="width: 100%; border-collapse: collapse; margin-top: 20px;">
+            <thead>
+              <tr>
+                <th>Sustancia</th>
+                <th>Consecuencias</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>Marihuana</td>
+                <td>
+                  <ul style="margin: 0; padding-left: 20px;">
+                    <li>Aumento del riesgo de trastornos mentales como la depresión y la ansiedad.</li>
+                    <li>Alteración de la memoria a corto plazo y de las funciones cognitivas.</li>
+                    <li>Problemas respiratorios debido a la inhalación de humo.</li>
+                  </ul>
+                </td>
+              </tr>
+              <tr>
+                <td>Cocaína</td>
+                <td>
+                  <ul style="margin: 0; padding-left: 20px;">
+                    <li>Incremento en la frecuencia cardíaca y presión arterial, lo que puede llevar a problemas cardiovasculares graves.</li>
+                    <li>Alteraciones en el comportamiento, como paranoia y agresividad.</li>
+                    <li>Riesgo de adicción severa y deterioro de las funciones neurológicas.</li>
+                  </ul>
+                </td>
+              </tr>
+              <tr>
+                <td>Bazuco</td>
+                <td>
+                  <ul style="margin: 0; padding-left: 20px;">
+                    <li>Desintegración rápida de la salud física y mental, incluyendo daños graves en los pulmones y el sistema nervioso.</li>
+                    <li>Riesgo alto de desarrollo de trastornos psiquiátricos y dependencia.</li>
+                    <li>Problemas sociales y familiares debido al comportamiento errático y a la adicción intensa.</li>
+                  </ul>
+                </td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+      </div>
+    </div>
+
+    <div class="container flex-grow-1 d-flex flex-column">
+      <div class="card-header align-items-center d-flex" id="dataset">
+        <h4 (click)="scrollTo('dataset')" style="font-size: 17px;"><i class="fas fa-database"></i>Información sobre el set de datos utilizado</h4><br>
+      </div>
+      <div class="card-body">
+        <p>El set de datos utilizado para la creación del modelo predictivo se tomó a partir de la Encuesta Nacional de Consumo de Sustancias Psicoactivas en Población General - ENCSPA- 2019, una ecuesta realizada por Departamento Administrativo Nacional de Estadística DANE.</p>
+        <p>La encuesta fue realizada con el fin de conocer la situación de las personas a partir de diferentes preguntas que se realizaron, tanto preguntas de caracter informativo como edad, etnia, lugar de vivienda, entre otros, asi mismo preguntas acerca del consumo de alcohol y sustancias psicoactivas ilegales.</p>
+        <p>Si desea conocer más información sobre el set de datos usado puede ingresar al siguiente link: <a href="https://microdatos.dane.gov.co/index.php/catalog/680/study-description" target="_blank">Link de acceso al set de datos</a>.</p>
+      </div>
+    </div>
+  </div>
+
+  <div class="col-xl-6 col-lg-6 d-flex flex-column justify-content-center">
+    <div class="container flex-grow-1 d-flex flex-column">
+      <h4 style="font-size: 17px;" (click)="scrollTo('problematica')"><i class="fas fa-exclamation-circle"></i>Información de la Aplicación</h4>
+      <hr>
+
+      <div class="contenedor-imagen">
+        <img src="../../../../assets/images/tesis/info-app2.png" alt="Infografía del Consumo" class="responsive-img">
+      </div>
+      <section id="objetivos">
+        <h4 style="font-size: 17px;" (click)="scrollTo('objetivos')"><i class="fas fa-bullseye"></i> Objetivos de la Aplicación</h4>
+        <ol>
+          <li><strong>Prevención del Consumo</strong>
+            <ul>
+              <li><strong>Grupos enfocados</strong>: Especialmente jóvenes.</li>
+              <li><strong>Información personalizada</strong>: Basada en la predicción del riesgo (muy bajo, bajo, medio, alto, muy alto).</li>
+            </ul>
+          </li>
+          <li><strong>Educación y Concientización</strong>
+            <ul>
+              <li><strong>Efectos nocivos</strong>: Información sobre los efectos perjudiciales de estas sustancias.</li>
+              <li><strong>Consejos preventivos</strong>: Estrategias para evitar el consumo.</li>
+            </ul>
+          </li>
+          <li><strong>Apoyo a Personas en Riesgo</strong>
+            <ul>
+              <li><strong>Evaluación personalizada</strong>: Análisis de factores de riesgo mediante algoritmos.</li>
+              <li><strong>Retroalimentación personalizada</strong>: Proporcionar apoyo específico basado en datos recolectados.</li>
+            </ul>
+          </li>
+          <li><strong>Investigación y Análisis de Datos</strong>
+            <ul>
+              <li><strong>Tendencias de consumo</strong>: Análisis de datos sobre el consumo de sustancias en Colombia.</li>
+              <li><strong>Programas de prevención</strong>: Contribución al desarrollo de programas de prevención más efectivos.</li>
+            </ul>
+          </li>
+        </ol>
+      </section>
+
+      <section id="funcionalidades">
+        <h4 style="font-size: 17px;" (click)="scrollTo('funcionalidades')"><i class="fas fa-tools"></i> Funcionalidades de la Aplicación</h4>
+        <ul>
+          <li><strong>Predicción de riesgo</strong>: La aplicación evaluará el riesgo de consumo de sustancias en los usuarios.</li>
+          <li><strong>Educación continua</strong>: Proporcionará información actualizada sobre los riesgos y efectos del consumo.</li>
+          <li><strong>Apoyo personalizado</strong>: Ofrecerá consejos y estrategias específicas para cada usuario.</li>
+        </ul>
+      </section>
+
+      <section id="beneficios">
+        <h4 style="font-size: 17px;" (click)="scrollTo('beneficios')"><i class="fas fa-medal"></i> Beneficios Esperados</h4>
+
+        <div class="contenedor-imagen">
+          <img src="../../../../assets/images/tesis/info-app3.png" alt="Infografía del Consumo" class="responsive-img">
+        </div><br><br>
+        <ul>
+          <li><strong>Prevención del consumo</strong>: Reducir el número de nuevos consumidores.</li>
+          <li><strong>Mejora de la salud</strong>: Promover un mejor estado de salud mental y física.</li>
+          <li><strong>Concientización</strong>: Aumentar la conciencia pública sobre los peligros del consumo.</li>
+          <li><strong>Apoyo a las entidades de salud</strong>: Proveer datos para la creación de políticas de salud más efectivas.</li>
+        </ul>
+      </section><br>
+    </div>
   </div>
 </div>
 
@@ -163,7 +163,7 @@
         </div>
         <div class="card-body">
           <p>Las variables del modelo representan los factores clave utilizados en el análisis y predicción del riesgo de consumo de sustancias. Cada variable aporta información específica que ayuda a identificar patrones y realizar intervenciones efectivas.</p>
-        
+
             <div class="table-responsive">
                 <!-- Contenedor para el scroll con el resto de los datos -->
                 <div class="scrollable-content">
