--- a/Admin/src/app/pages/dashboards/index/index.component.html
+++ b/Admin/src/app/pages/dashboards/index/index.component.html
@@ -61,30 +61,40 @@
           <div class="card-header align-items-center d-flex">
               <h3 (click)="scrollTo('funciones')" class="card-title mb-0 flex-grow-1" style="font-size: 18px;"><i class="fas fa-tools"></i>Funciones y Herramientas</h3>
           </div><br>
-          <div class="card-body d-flex flex-column">
-            <div class="menu d-flex flex-column flex-grow-1">
-                <a (click)="dirigirInfoComponente()" class="menu-item d-flex align-items-center justify-content-center flex-grow-1">
+          <div class="card-body">
+            <ul class="list-group list-group-flush no-border">
+              <li class="list-group-item">
+                <a (click)="dirigirInfoComponente()" class="menu-item align-items-center justify-content-center">
                   <i class="fas fa-info-circle"></i>
                   Información de la App
                 </a>
-                <a (click)="dirigirGraficos()" class="menu-item d-flex align-items-center justify-content-center flex-grow-1">
+              </li>
+              <li class="list-group-item">
+                <a (click)="dirigirGraficos()" class="menu-item align-items-center justify-content-center">
                   <i class="fas fa-chart-bar"></i>
                   Estadísticas y Gráficos
                 </a>
-                <a (click)="dirigirMapa()" class="menu-item d-flex align-items-center justify-content-center flex-grow-1">
+              </li>
+              <li class="list-group-item">
+                <a (click)="dirigirMapa()" class="menu-item align-items-center justify-content-center">
                   <i class="fas fa-map"></i>
                   Mapa de Calor
                 </a>
-                <a (click)="dirigirFormulario()" class="menu-item d-flex align-items-center justify-content-center flex-grow-1">
+              </li>
+              <li class="list-group-item">
+                <a (click)="dirigirFormulario()" class="menu-item align-items-center justify-content-center">
                   <i class="fas fa-file-alt"></i>
                   Formulario para Predecir
                 </a>
-                <a href="https://microdatos.dane.gov.co/index.php/catalog/680/study-description" target="_blank" class="menu-item d-flex align-items-center justify-content-center flex-grow-1">
-                    <i class="fas fa-database"></i>
-                    Información Data Set
+              </li>
+              <li class="list-group-item">
+                <a href="https://microdatos.dane.gov.co/index.php/catalog/680/study-description" target="_blank" class="menu-item d-flex align-items-center justify-content-center">
+                  <i class="fas fa-database"></i>
+                  Información del Data Set
                 </a>
-              </div>
-            </div>
+              </li>
+            </ul>
+          </div>
       </div>
   </div><!--end col-->
 </div><!--end row-->
