correcciones en parrafos

--- a/Admin/src/app/pages/dashboards/index/index.component.html
+++ b/Admin/src/app/pages/dashboards/index/index.component.html
@@ -17,7 +17,7 @@
                 </div>
                 <br><br><br><br><br><br><br><br>
                 <h4 class = "titulo" style="color: #08273b; text-align: left; ">Un Futuro sin Riesgos: Tu Apoyo en la Prevención de las Adicciones</h4>
-                <p class = "proposito" style="color: #08273b; text-align: left; font-size: 14px;">Nuestra aplicación previene el consumo de sustancias psicoactivas, con predicciones <br> de riesgo e información de cuales fueron los factores de riesgo mas influyentes. <br> Esta aplicación esta enfocada para personas consumidoras, no consumidoras , entes <br> guberbnamentales y de salud que buscan comnbatir esta problemática.</p>
+                <p class = "proposito" style="color: #08273b; text-align: left; font-size: 14px;">Nuestra aplicación previene el consumo de sustancias psicoactivas, con predicciones <br> de riesgo e información de cuales fueron los factores de riesgo mas influyentes. <br> Esta aplicación está dirigida a consumidores y no consumidores de sustancias, así <br> como a entidades gubernamentales y de salud que buscan combatir esta problemática.</p>
                 <!-- Otro contenido aquí si es necesario -->
                 <!-- Botón "Predecir" rediseñado -->
                 <button (click)="dirigirFormulario()" class="boton-interactivo">
