--- a/Admin/src/app/pages/forms/tesis-form/tesis-form.component.html
+++ b/Admin/src/app/pages/forms/tesis-form/tesis-form.component.html
@@ -812,13 +812,13 @@
         <div class="card-body">
           <div class="row justify-content-center">
             <div class="col-md-10 text-center">
-              <h4 class="mb-3">Factores influyentes en la prediccion</h4>
-              <p class="text-muted">Este apartado hace referencia a las caracteristicas que tuvieron mayor influencia en la prediccion previamente expuesta, cabe destacar que estas caracteriticas van acorde a la respuesta dada por el usuario y son dadas por el modelo como las mas influyentes.</p>
+              <h4 class="mb-3">Factores influyentes en la predicción</h4>
+              <p class="text-muted">Este apartado destaca las características que tuvieron mayor influencia en la predicción previamente presentada. Cabe mencionar que estas características están alineadas con las respuestas proporcionadas por el usuario y son identificadas por el modelo como las más influyentes.</p>
               <apx-chart [series]="distributedColumnChart.series" [chart]="distributedColumnChart.chart"
                          [dataLabels]="distributedColumnChart.dataLabels" [plotOptions]="distributedColumnChart.plotOptions"
                          [yaxis]="distributedColumnChart.yaxis" [xaxis]="distributedColumnChart.xaxis"
                          [legend]="distributedColumnChart.legend" [colors]="distributedColumnChart.colors"
-                         [grid]="distributedColumnChart.grid" dir="ltr"></apx-chart>
+                         [grid]="distributedColumnChart.grid" dir="ltr">kjfdkj</apx-chart>
             </div>
           </div>
             <!--end row-->
