--- a/Admin/src/app/pages/dashboards/tesis-maps/tesis-maps.component.html
+++ b/Admin/src/app/pages/dashboards/tesis-maps/tesis-maps.component.html
@@ -2,7 +2,7 @@
   <div class="col-xl-12">
       <div class="card card-height-100">
           <div class="card-header align-items-center d-flex">
-              <h6 class="card-title mb-0 flex-grow-1">Mapa de calor de personas en riesgo de consumo de sustancias psicoactivas</h6>
+              <h6 class="card-title mb-0 flex-grow-1"><i class="fas fa-map-marked-alt"></i> Mapa de calor de personas en riesgo de consumo de sustancias psicoactivas</h6>
               <div>
                   <button type="button" class="btn btn-subtle-secondary btn-sm me-1" (click)="changebalanceValue('riesgo_muy_bajo')">
                       MUY BAJO
